# quotator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: db.rs  handlers.rs  main.rs  models.rs
artifacts/: test-report.txt
crawler/: Dockerfile  go.mod  main.go
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CostChart.jsx  EmptyState.jsx  Header.jsx  QuoteSelector.jsx  QuoteSummary.jsx  QuoteTable.jsx  ResourceForm.jsx  SearchFilter.jsx  Skeleton.jsx  Toast.jsx
frontend/src/hooks/: useAutoSave.js  useDarkMode.js  useKeyboardShortcuts.jsx  usePricing.js  useQuote.js
frontend/src/styles/: main.css
frontend/src/utils/: api.js  cache.js
scripts/: build.sh  install-linux.sh  install-mac.sh  install-windows.ps1  quotator.ps1  quotator.sh  start.sh  stop.sh  test.sh
